refactor: Update CSS properties for padding and margin
Replaced traditional CSS padding and margin properties with logical properties. These changes affect components such as button, game, footer, header, and navigation. This shift to logical properties increases code readability and maintainability, and also ensures better handling of changing inline or block flow directions.

--- a/src/components/ui/button/button.module.css
+++ b/src/components/ui/button/button.module.css
@@ -1,5 +1,6 @@
 .button {
-	padding: 10px 14px;
+	padding-block: 10px;
+	padding-inline: 14px;
 	font-size: var(--font-size-code);
 	border-radius: var(--border-radius);
 
