--- a/src/components/ui/header/navigation.module.css
+++ b/src/components/ui/header/navigation.module.css
@@ -27,8 +27,7 @@
 				align-items: center;
 				justify-content: center;
 				height: 100%;
-				padding-right: var(--gutter-x);
-				padding-left: var(--gutter-x);
+				padding-inline: var(--gutter-x);
 
 				@container (width < 709px) {
 					--gutter-x: 0;
