--- a/src/components/ui/header/header.module.css
+++ b/src/components/ui/header/header.module.css
@@ -10,14 +10,11 @@
 	border-bottom: var(--border);
 
 	.title {
-		--gutter-x: 22px;
-
 		display: flex;
 		flex-basis: 311px;
 		flex-shrink: 2;
 		align-items: center;
-		padding-right: var(--gutter-x);
-		padding-left: var(--gutter-x);
+		padding-inline: 22px;
 		border-inline-end: var(--border);
 	}
 }
