--- a/src/components/ui/game/game.module.css
+++ b/src/components/ui/game/game.module.css
@@ -19,9 +19,10 @@
 
 		button {
 			position: absolute;
-			bottom: 55px;
-			left: 50%;
-			translate: -50%;
+			inset-block-end: 55px;
+			inset-inline: 0;
+			width: fit-content;
+			margin-inline: auto;
 		}
 	}
 
