refactor: Update polygon positioning in game.module.css
Refactored button positioning in the game.module.css from absolute value to logical properties. This enhances code readability, and it adapts better to changes in inline or block flow directions, improving user interface adaptability.

--- a/src/components/ui/game/game.module.css
+++ b/src/components/ui/game/game.module.css
@@ -65,8 +65,8 @@
 
 	.polygons {
 		position: absolute;
-		top: calc(50% + 15px);
-		left: calc(50% + 86px);
+		inset-block-start: calc(50% + 15px);
+		inset-inline-start: calc(50% + 86px);
 		z-index: -1;
 		pointer-events: none;
 		translate: -50% -50%;
