--- a/src/components/ui/header/header.module.css
+++ b/src/components/ui/header/header.module.css
@@ -7,7 +7,7 @@
 	height: var(--height-header);
 	font-size: var(--font-size-label);
 	color: var(--color-secondary-1);
-	border-bottom: var(--border);
+	border-block-end: var(--border);
 
 	.title {
 		display: flex;
