refactor: Rename 'gutter' variables to 'padding'
Revised the variable naming convention in CSS files from using 'gutter' to 'padding'. The adjustment ensures more clarity and adheres to common practice in CSS naming. This aids in improving the readability and coherence of our CSS codebase.

--- a/src/components/ui/header/navigation.module.css
+++ b/src/components/ui/header/navigation.module.css
@@ -21,16 +21,16 @@
 
 			a,
 			span {
-				--gutter-x: 32px;
+				--padding-inline: 32px;
 
 				display: flex;
 				align-items: center;
 				justify-content: center;
 				height: 100%;
-				padding-inline: var(--gutter-x);
+				padding-inline: var(--padding-inline);
 
 				@container (width < 709px) {
-					--gutter-x: 0;
+					--padding-inline: 0;
 				}
 			}
 
