refactor: Replace hardcoded values with CSS variables in key.module.css
The refactor for `span` properties in key.module.css changes the hardcoded width and height values to CSS variables. This modification allows for easier manipulation of these dimensions in the future, maintaining cleaner and more manageable code.

--- a/src/components/ui/game/key.module.css
+++ b/src/components/ui/game/key.module.css
@@ -7,10 +7,12 @@
 	border-radius: var(--border-radius);
 
 	span {
+		--width: 9px;
+
 		position: absolute;
 		inset: 0;
-		width: 9px;
-		height: 6px;
+		width: var(--width);
+		height: calc(var(--width) / 2 * sqrt(3));
 		margin: auto;
 		clip-path: polygon(50% 0, 100% 100%, 0 100%);
 		background-color: var(--color-secondary-4);
