refactor: Update CSS styling in about-me index.module.css
This commit provides more flexibility in the about-me index.module.css by replacing hardcoded px values with CSS variables. Specifically, the flex-basis property now refers to a variable allowing more streamlined changes in the future and increased readability of the styling code.

--- a/src/routes/about-me/index.module.css
+++ b/src/routes/about-me/index.module.css
@@ -4,9 +4,10 @@
 
 	aside {
 		--width-activitybar: 67px;
+		--width-sidebar: var(--width-sitetitle);
 
 		display: flex;
-		flex-basis: var(--width-sitetitle);
+		flex-basis: var(--width-sidebar);
 		border-inline-end: var(--border);
 
 		.activitybar {
