refactor: Replace width usage with inline-size
In this commit, all instances of CSS width property usage in various components including footer, index, header, navigation, and game have been replaced with the equivalent, more modern CSS property - inline-size. This switch to logical properties like inline-size for layout intends to make the codebase more responsive, readable and maintainably by aligning with the CSS writing modes. This change improves compliance with internationalization and better supports different writing modes.

--- a/src/components/ui/game/food.module.css
+++ b/src/components/ui/game/food.module.css
@@ -9,7 +9,7 @@
 	&,
 	&::before,
 	&::after {
-		width: var(--size);
+		inline-size: var(--size);
 		height: var(--size);
 		background-color: rgb(var(--color-accent-2-rgb) / var(--alpha));
 		border-radius: var(--border-radius-round);
