--- a/src/components/ui/game/game.module.css
+++ b/src/components/ui/game/game.module.css
@@ -12,7 +12,7 @@
 
 	.main {
 		position: relative;
-		width: 238px;
+		inline-size: 238px;
 		background: rgb(var(--color-base-2-rgb) / 84%);
 		border-radius: var(--border-radius);
 		box-shadow: inset 1px 5px 11px rgb(var(--color-base-1-rgb) / 71%);
@@ -21,7 +21,7 @@
 			position: absolute;
 			inset-block-end: 55px;
 			inset-inline: 0;
-			width: fit-content;
+			inline-size: fit-content;
 			margin-inline: auto;
 		}
 	}
@@ -31,7 +31,7 @@
 		display: flex;
 		flex-direction: column;
 		gap: 7px;
-		width: 181px;
+		inline-size: 181px;
 
 		> * {
 			padding: 13px;
