--- a/src/routes/index.module.css
+++ b/src/routes/index.module.css
@@ -5,7 +5,7 @@ section {
 		container-type: inline-size;
 		display: flex;
 		align-items: center;
-		max-width: 1160px;
+		max-inline-size: 1160px;
 		min-height: var(--height-main);
 		margin-inline: auto;
 
@@ -16,15 +16,15 @@ section {
 			display: grid;
 			grid-template-columns: auto 510px;
 			gap: var(--gap);
-			width: 100%;
+			inline-size: 100%;
 			padding-block: var(--padding-block);
 
-			@container (width < 1103px) {
+			@container (inline-size < 1103px) {
 				--gap: 60px;
 				--padding-block: 80px;
 			}
 
-			@container (width <= 777px) {
+			@container (inline-size <= 777px) {
 				--gap: 0;
 
 				grid-template-columns: auto;
@@ -33,7 +33,7 @@ section {
 			.title {
 				align-self: end;
 
-				@container (width < 1103px) {
+				@container (inline-size < 1103px) {
 					grid-column: 1 / -1;
 				}
 
@@ -55,27 +55,27 @@ section {
 				grid-row: 1 / 3;
 				grid-column: 2 / 3;
 
-				@container (width < 1103px) {
+				@container (inline-size < 1103px) {
 					grid-row: auto;
 				}
 
-				@container (width <= 777px) {
+				@container (inline-size <= 777px) {
 					grid-column: auto;
-					width: 100%;
-					max-width: 570px;
+					inline-size: 100%;
+					max-inline-size: 570px;
 					margin-block-start: 60px;
 					margin-inline-start: auto;
 				}
 			}
 
 			.description {
-				@container (width < 1103px) {
+				@container (inline-size < 1103px) {
 					grid-row: 2 / 3;
 					grid-column: 1 / 2;
 					margin-block-start: 40px;
 				}
 
-				@container (width <= 777px) {
+				@container (inline-size <= 777px) {
 					grid-column: auto;
 					margin-block-start: 80px;
 				}
@@ -100,13 +100,13 @@ section {
 
 					&:nth-of-type(1) {
 						.line {
-							@container (width < 320px) {
+							@container (inline-size < 320px) {
 								display: none;
 							}
 						}
 
 						.block {
-							@container (width >= 320px) {
+							@container (inline-size >= 320px) {
 								display: none;
 							}
 						}
@@ -114,13 +114,13 @@ section {
 
 					&:nth-of-type(2) {
 						.line {
-							@container (width < 397px) {
+							@container (inline-size < 397px) {
 								display: none;
 							}
 						}
 
 						.block {
-							@container (width >= 397px) {
+							@container (inline-size >= 397px) {
 								display: none;
 							}
 						}
@@ -131,13 +131,13 @@ section {
 					container-type: inline-size;
 
 					br {
-						@container (width > 493.09px) {
+						@container (inline-size > 493.09px) {
 							display: none;
 						}
 					}
 
 					a {
-						@container (width <= 326.59px) {
+						@container (inline-size <= 326.59px) {
 							word-break: break-all;
 						}
 					}
