refactor: Replace height usage with block-size
The height property in various CSS modules, including footer, header, navigation, game components, and layout, has been replaced with the block-size property. Adapting to the use of block-size aligns with the growing trend of using CSS logical properties, allowing the user interface to adapt better to various text and writing modes, enhancing global compatibility for various languages, and improving the overall readability and maintainability of the codebase.

--- a/src/components/ui/footer/footer.module.css
+++ b/src/components/ui/footer/footer.module.css
@@ -1,10 +1,10 @@
 :root {
-	--height-footer: 56px;
+	--block-size-footer: 56px;
 }
 
 .footer {
 	display: flex;
-	height: var(--height-footer);
+	block-size: var(--block-size-footer);
 	font-size: var(--font-size-label);
 	color: var(--color-secondary-1);
 	border-block-start: var(--border);
@@ -23,7 +23,7 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		height: 100%;
+		block-size: 100%;
 	}
 
 	p {
