--- a/src/components/ui/header/navigation.module.css
+++ b/src/components/ui/header/navigation.module.css
@@ -4,7 +4,7 @@
 	ul {
 		container-type: inline-size;
 		display: flex;
-		height: 100%;
+		block-size: 100%;
 
 		li {
 			border-inline-end: var(--border);
@@ -26,7 +26,7 @@
 				display: flex;
 				align-items: center;
 				justify-content: center;
-				height: 100%;
+				block-size: 100%;
 				padding-inline: var(--padding-inline);
 
 				@container (inline-size < 709px) {
