refactor: Update grid and margin settings in index.module.css
This update introduces the use of CSS variables for the grid-column and margin-block-start parameters within index.module.css. This new approach enhances consistency throughout various modules, optimizes readability, and simplifies the process of changing these settings.

--- a/src/routes/index.module.css
+++ b/src/routes/index.module.css
@@ -69,15 +69,21 @@ section {
 			}
 
 			.description {
+				--grid-column: unset;
+
+				grid-column: var(--grid-column);
+				margin-block-start: var(--margin-block-start);
+
 				@container (inline-size < 1103px) {
+					--grid-column: 1 / 2;
+					--margin-block-start: 40px;
+
 					grid-row: 2 / 3;
-					grid-column: 1 / 2;
-					margin-block-start: 40px;
 				}
 
 				@container (inline-size <= 777px) {
-					grid-column: auto;
-					margin-block-start: 80px;
+					--grid-column: auto;
+					--margin-block-start: 80px;
 				}
 
 				p {
