--- a/src/components/ui/header/header.module.css
+++ b/src/components/ui/header/header.module.css
@@ -25,8 +25,8 @@
 		a {
 			display: flex;
 			align-items: center;
-			width: 100%;
-			height: 100%;
+			inline-size: 100%;
+			block-size: 100%;
 
 			&:focus-visible,
 			&:hover {
