refactor: Adjust CSS variables for 'About me' page layout
Updated the CSS code for the 'About me' page layout to utilize defined CSS variables instead of hardcoded values. This change allows for easier adjustments in the future and improves the code's readability and maintainability.

--- a/src/routes/about-me/index.module.css
+++ b/src/routes/about-me/index.module.css
@@ -3,11 +3,11 @@
 	block-size: var(--block-size-main); /* TEMP: */
 
 	aside {
+		--inline-size-aside: var(--inline-size-sitetitle);
 		--inline-size-activitybar: 67px;
-		--inline-size-sidebar: var(--inline-size-sitetitle);
 
 		display: flex;
-		flex-basis: var(--inline-size-sidebar);
+		inline-size: var(--inline-size-aside);
 		border-inline-end: var(--border);
 
 		.activitybar {
