refactor: Remove layout.module.css file
The `layout.module.css` file was deleted and its contents (block-size and overflow properties) were moved to the `global.css` file. Further, the usage of styles from this file was eliminated in the `layout.tsx` file. These changes simplify the overall code structure and centralize the style definitions.

--- a/src/global.css
+++ b/src/global.css
@@ -68,7 +68,8 @@ html {
 		border-radius: var(--border-radius);
 
 		main {
-			min-block-size: var(--block-size-main);
+			block-size: var(--block-size-main);
+			overflow: scroll;
 		}
 
 		a,
