feat: Update "about-me" route layout and related css changes
The code changes involve updates to the layout in the "about-me" route by changing the structure within a main editor div. The associated CSS styles have also been modified to be in sync with these structural changes. These modifications will improve the page's organization and clarity of different elements.

--- a/src/routes/about-me/index.module.css
+++ b/src/routes/about-me/index.module.css
@@ -22,12 +22,25 @@
 		}
 	}
 
-	.pane {
+	.editor {
+		display: flex;
 		flex-grow: 1;
-		background-color: yellow; /* TEMP: */
+		flex-wrap: wrap;
+		gap: 1px;
+		block-size: var(--block-size-main); /* TEMP: */
+		overflow: scroll;
+		background-color: purple; /* TEMP: */
 
-		+ & {
-			border-inline-start: var(--border);
+		.pane {
+			container-type: inline-size;
+			flex-basis: 400px;
+			flex-grow: 1;
+			block-size: var(--block-size-main); /* TEMP: */
+			background-color: yellow; /* TEMP: */
+
+			&:last-child {
+				background-color: green; /* TEMP: */
+			}
 		}
 	}
 }
