--- a/src/routes/about-me/index.module.css
+++ b/src/routes/about-me/index.module.css
@@ -12,13 +12,29 @@
 
 		.activitybar {
 			flex-basis: var(--inline-size-activitybar);
-			background-color: red; /* TEMP: */
 			border-inline-end: var(--border);
+
+			ul {
+				li {
+					padding-block: 17px;
+					text-align: center;
+
+					button {
+						font-size: 24px;
+						line-height: 1;
+						color: var(--color-secondary-1);
+
+						&:focus-visible,
+						&:hover {
+							color: var(--color-secondary-4);
+						}
+					}
+				}
+			}
 		}
 
 		.sidebar {
 			flex-basis: calc(100% - var(--inline-size-activitybar));
-			background-color: blue; /* TEMP: */
 		}
 	}
 
