feat: Update "About Me" page for enhanced interactivity
This commit includes updates to both the index.tsx and index.module.css files to improve the interactivity of the activity bar on the "About Me" page. The changes introduce interactive buttons, better user engagement and a more immersive user experience.

--- a/src/routes/about-me/index.module.css
+++ b/src/routes/about-me/index.module.css
@@ -19,15 +19,23 @@
 					padding-block: 17px;
 					text-align: center;
 
-					button {
+					button,
+					span {
 						font-size: 24px;
 						line-height: 1;
+					}
+
+					button {
 						color: var(--color-secondary-1);
 
 						&:focus-visible,
 						&:hover {
 							color: var(--color-secondary-4);
 						}
+					}
+
+					span {
+						color: var(--color-secondary-4);
 					}
 				}
 			}
