feat: Change styling of buttons on "About Me" page
This commit modifies the CSS for the "About Me" page to adjust the appearance and behavior of buttons. Button opacity has been changed for better visibility and hover functionality has been updated, improving overall user interaction.

--- a/src/routes/about-me/index.module.css
+++ b/src/routes/about-me/index.module.css
@@ -23,19 +23,16 @@
 					span {
 						font-size: 24px;
 						line-height: 1;
+						color: var(--color-secondary-1);
 					}
 
 					button {
-						color: var(--color-secondary-1);
+						opacity: 0.4;
 
 						&:focus-visible,
 						&:hover {
-							color: var(--color-secondary-4);
+							opacity: 1;
 						}
-					}
-
-					span {
-						color: var(--color-secondary-4);
 					}
 				}
 			}
