--- a/src/routes/about-me/index.module.css
+++ b/src/routes/about-me/index.module.css
@@ -19,19 +19,19 @@
 					padding-block: 17px;
 					text-align: center;
 
+					button {
+						color: var(--color-secondary-1-lighter);
+					}
+
 					button,
 					span {
 						font-size: 24px;
 						line-height: 1;
-						color: var(--color-secondary-1);
-						opacity: 0.4;
 					}
 
-					button {
-						&:focus-visible,
-						&:hover {
-							opacity: 1;
-						}
+					button:is(:focus-visible, :hover),
+					span {
+						color: var(--color-secondary-1);
 					}
 				}
 			}
