--- a/src/routes/about-me/index.module.css
+++ b/src/routes/about-me/index.module.css
@@ -20,18 +20,15 @@
 					text-align: center;
 
 					button {
-						color: var(--color-secondary-1-lighter);
-					}
-
-					button,
-					span {
 						font-size: 24px;
 						line-height: 1;
-					}
+						color: var(--color-secondary-1-lighter);
 
-					button:is(:focus-visible, :hover),
-					span {
-						color: var(--color-secondary-1);
+						&.activated,
+						&:focus-visible,
+						&:hover {
+							color: var(--color-secondary-1);
+						}
 					}
 				}
 			}
