refactor: Refactor CSS pseudo-classes in multiple components
Condensed the focus-visible and hover state styles in footer, header, navigation, and about-me components using the newly-introduced ':is' pseudo-class. This simplification results in cleaner, less-repetitive CSS that upholds the same functionality and appearance.

--- a/src/components/ui/footer/footer.module.css
+++ b/src/components/ui/footer/footer.module.css
@@ -41,8 +41,7 @@
 			padding-inline: 23px;
 		}
 
-		&:focus-visible,
-		&:hover {
+		&:is(:focus-visible, :hover) {
 			color: var(--color-secondary-4);
 		}
 
