--- a/src/components/ui/header/navigation.module.css
+++ b/src/components/ui/header/navigation.module.css
@@ -35,8 +35,7 @@
 			}
 
 			a {
-				&:focus-visible,
-				&:hover {
+				&:is(:focus-visible, :hover) {
 					color: var(--color-secondary-4);
 					box-shadow: inset 0 -3px 0 var(--color-accent-1);
 				}
