--- a/src/routes/about-me/index.module.css
+++ b/src/routes/about-me/index.module.css
@@ -35,6 +35,29 @@
 
 		.sidebar {
 			flex-grow: 1;
+
+			nav {
+				.header {
+					display: flex;
+					gap: 11px;
+					align-items: center;
+					inline-size: 100%;
+					block-size: 40px;
+					padding-inline: 14px;
+					font-size: var(--font-size-label);
+					border-block-end: var(--border);
+
+					&::before {
+						--inline-size: 9px;
+
+						inline-size: var(--inline-size);
+						block-size: calc(var(--inline-size) / 2 * sqrt(3));
+						clip-path: polygon(50% 100%, 0 0, 100% 0);
+						content: "";
+						background-color: var(--color-secondary-4);
+					}
+				}
+			}
 		}
 	}
 
