fix: Update color property in footer CSS components
The update targets color properties of .twitter, .facebook, and .github selectors in the footer.module.css file. The color property value of .twitter and .facebook is now changed only upon focus or hover, while the color of .github has been changed. This results in a more interactive and dynamic change of color properties on user interaction.

--- a/src/components/ui/footer/footer.module.css
+++ b/src/components/ui/footer/footer.module.css
@@ -31,20 +31,24 @@
 	}
 
 	a {
-		color: var(--color-secondary-1-lighter);
-
 		&.twitter,
 		&.facebook {
 			inline-size: 52px;
+			color: var(--color-secondary-1-lighter);
+
+			&:is(:focus-visible, :hover) {
+				color: var(--color-secondary-1);
+			}
 		}
 
 		&.github {
 			gap: 7px;
 			padding-inline: 23px;
-		}
-
-		&:is(:focus-visible, :hover) {
 			color: var(--color-secondary-1);
+
+			&:is(:focus-visible, :hover) {
+				color: var(--color-secondary-4);
+			}
 		}
 
 		i {
