--- a/src/components/ui/header/navigation.module.css
+++ b/src/components/ui/header/navigation.module.css
@@ -19,8 +19,7 @@
 				border-inline-end: none;
 			}
 
-			a,
-			span {
+			.link {
 				--padding-inline: 32px;
 
 				display: flex;
@@ -28,25 +27,21 @@
 				justify-content: center;
 				block-size: 100%;
 				padding-inline: var(--padding-inline);
+				color: var(--color-secondary-1);
 
 				@container (inline-size < 709px) {
 					--padding-inline: 0;
 				}
-			}
 
-			a {
-				color: var(--color-secondary-1);
-
-				&:is(:focus-visible, :hover) {
+				&:is(:focus-visible, :hover),
+				&.activated {
 					color: var(--color-secondary-4);
 					box-shadow: inset 0 -3px 0 var(--color-accent-1);
 				}
-			}
 
-			span {
-				color: var(--color-secondary-4);
-				pointer-events: none;
-				box-shadow: inset 0 -3px 0 var(--color-accent-1);
+				&.activated {
+					pointer-events: none;
+				}
 			}
 		}
 	}
