--- a/src/components/ui/header/header.module.css
+++ b/src/components/ui/header/header.module.css
@@ -17,19 +17,19 @@
 		color: var(--color-secondary-1);
 		border-inline-end: var(--border);
 
-		&:not(:has(a)),
-		a {
-			padding-inline: 22px;
-		}
-
-		a {
+		.link {
 			display: flex;
 			align-items: center;
 			inline-size: 100%;
 			block-size: 100%;
+			padding-inline: 22px;
 
 			&:is(:focus-visible, :hover) {
 				color: var(--color-secondary-4);
+			}
+
+			&.disabled {
+				pointer-events: none;
 			}
 		}
 	}
