feat: Add adaptive visibility for double and back in index.module.css
Initialized responsive visibility settings for the 'double' and 'back' elements in index.module.css. Made corresponding changes in index.tsx to introduce these classes. The UI will show 'double' when the inline-size is more than 326px and 'back' when it's less.

--- a/src/routes/index.module.css
+++ b/src/routes/index.module.css
@@ -162,6 +162,18 @@
 
 				.literal {
 					color: var(--color-accent-3);
+
+					.double {
+						@container (inline-size <= 326px) {
+							display: none;
+						}
+					}
+
+					.back {
+						@container (inline-size > 326px) {
+							display: none;
+						}
+					}
 				}
 			}
 		}
