--- a/src/components/ui/header/header.module.css
+++ b/src/components/ui/header/header.module.css
@@ -17,7 +17,7 @@
 		color: var(--color-secondary-1);
 		border-inline-end: var(--border);
 
-		.link {
+		a {
 			display: flex;
 			align-items: center;
 			inline-size: 100%;
