feat: Add box-shadow to activated state in Navigation component CSS
Added a new CSS rule for the "activated" state in the Navigation component, adding a box-shadow property. This enhances visual indication for interaction, improving accessibility and user experience. Plus, also added color for `:is(:focus-visible, :hover)` pseudoclasses to increase visual contrast.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/components/ui/header/navigation.module.css
+++ b/src/components/ui/header/navigation.module.css
@@ -36,6 +36,9 @@
 				&:is(:focus-visible, :hover),
 				&.activated {
 					color: var(--color-secondary-4);
+				}
+
+				&.activated {
 					box-shadow: inset 0 -3px 0 var(--color-accent-1);
 				}
 			}
