feat: Add interactive functionality to Accordion component
The Accordion component has been updated to include a button that toggles between displaying 'open' and 'closed' states. Corresponding CSS styles were also updated to visually represent these states. This enhanced interactivity will improve user experience on the website.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/components/ui/accordion/accordion.module.css
+++ b/src/components/ui/accordion/accordion.module.css
@@ -1,3 +1,19 @@
 .accordion {
-	background-color: red; /* TEMP: */
+	font-size: var(--font-size-label);
+
+	.header {
+		inline-size: 100%;
+		background-color: red; /* TEMP: */
+	}
+
+	.content {
+		max-block-size: 0;
+		overflow: hidden;
+		background-color: blue; /* TEMP: */
+		transition: var(--transition);
+
+		&.opened {
+			max-block-size: 500px;
+		}
+	}
 }
