feat: Update Accordion component to enhance usability and style
The Accordion component has been upgraded to include Triangle and Slot components, enhancing its functionality and flexibility. The addition of a 'label' prop improves reusability. Also, style improvements have been implemented for better alignment, padding, and a more streamlined appearance.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/components/interface/triangle/triangle.module.css
+++ b/src/components/interface/triangle/triangle.module.css
@@ -3,6 +3,7 @@
 	block-size: 6px;
 	clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
 	background-color: var(--color-secondary-4);
+	transition: var(--transition);
 
 	&.up {
 		rotate: 0deg;
