--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,10 @@
+/**
+ * PandaCSS CSS layers
+ * View the full documentation at https://panda-css.com/docs/concepts/cascade-layers#layer-css
+ */
+
+@layer reset, base, tokens, recipes, utilities;
+
 :root {
 	--block-size-main: calc(
 		100svh -
