refactor: Add custom style class to About Me page icons
Refactored icons in About Me page by adding a specific 'icon' class to TerminalIcon, UserIcon, and GamepadIcon. This makes it easier to independently control and modify styles for these icons.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/routes/about-me/index.module.css
+++ b/src/routes/about-me/index.module.css
@@ -20,7 +20,6 @@
 					text-align: center;
 
 					button {
-						font-size: 24px;
 						line-height: 1;
 						color: var(--color-secondary-1-lighter);
 
@@ -28,6 +27,10 @@
 						&:is(:focus-visible, :hover) {
 							color: var(--color-secondary-1);
 						}
+					}
+
+					.icon {
+						font-size: 24px;
 					}
 				}
 			}
