refactor: refactor padding values in accordion.module.css
implemented a css variable, --padding, for consistent padding in accordion.module.css.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/components/interface/accordion/accordion.module.css
+++ b/src/components/interface/accordion/accordion.module.css
@@ -1,4 +1,6 @@
 .accordion {
+	--padding: 14px;
+
 	font-size: var(--font-size-label);
 
 	.header {
@@ -7,7 +9,7 @@
 		align-items: center;
 		inline-size: 100%;
 		block-size: 40px;
-		padding-inline: 14px;
+		padding-inline: var(--padding);
 		border-block-end: var(--border);
 	}
 
@@ -21,7 +23,7 @@
 		}
 
 		.container {
-			padding: 14px;
+			padding: var(--padding);
 		}
 	}
 }
