fix: Adjust styling for activity bar in About Me page
This commit implements a minor styling fix to the 'activitybar' element on the 'About Me' page. Specifically, it sets the 'flex-shrink' property to 0 to prevent shrinkage of the specified item.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/routes/about-me/index.module.css
+++ b/src/routes/about-me/index.module.css
@@ -12,6 +12,7 @@
 
 		.activitybar {
 			flex-basis: var(--inline-size-activitybar);
+			flex-shrink: 0;
 			border-inline-end: var(--border);
 
 			ul {
