feat: Update sidebar navigation on About Me page
Added clickable icons for the different sections (bio, interests, education) in the sidebar navigation of the "About Me" page. Additionally, included UI improvements to highlight the selected or activated section.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/routes/about-me/index.module.css
+++ b/src/routes/about-me/index.module.css
@@ -55,12 +55,17 @@
 
 						display: flex;
 						gap: 8px;
+						inline-size: 100%;
 						padding-inline: var(--padding-inline);
 						margin-inline: calc(-1 * var(--padding-inline));
 						border-radius: 4px;
 
+						&.activated,
 						&:is(:focus-visible, :hover) {
 							color: var(--color-secondary-4);
+						}
+
+						&:not([disabled]):is(:focus-visible, :hover) {
 							background-color: var(--color-primary-1);
 						}
 					}
