refactor: Change border-radius in CSS to accommodate more stylings
Added 'border-radius-sm' and 'border-radius-md' in the CSS to widen the possibilities for styling elements. While the original 'border-radius' is preserved for migration purposes, this expansion enables more design diversity and precise control over the elements.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/global.css
+++ b/src/global.css
@@ -58,7 +58,9 @@
 	--color-accent-4-rgb: 201 139 223;
 	--border: var(--border-width) solid var(--color-primary-1);
 	--border-width: 1px;
-	--border-radius: 8px;
+	--border-radius-sm: 4px;
+	--border-radius-md: 8px;
+	--border-radius: 8px; /* TODO: For migration. Will be removed. */
 	--border-radius-round: 9999px;
 	--transition: all 0.25s ease-in-out;
 }
