refactor: Update border-radius design across modules
All hard-coded border-radius values have been switched to use predefined variables across different CSS modules. This enhancement ensures consistency and standardization in the border design. It also includes the removal of an obsolete 'border-radius' variable from the global stylesheet.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/components/interface/game/key.module.css
+++ b/src/components/interface/game/key.module.css
@@ -7,5 +7,5 @@
 	block-size: 28px;
 	background: var(--color-base-1);
 	border: var(--border);
-	border-radius: var(--border-radius);
+	border-radius: var(--border-radius-md);
 }
