--- a/src/components/interface/button/button.module.css
+++ b/src/components/interface/button/button.module.css
@@ -2,7 +2,7 @@
 	padding-block: 10px;
 	padding-inline: 14px;
 	font-size: var(--font-size-code);
-	border-radius: var(--border-radius);
+	border-radius: var(--border-radius-md);
 
 	&.primary {
 		background-color: var(--color-primary-2);
@@ -23,7 +23,7 @@
 
 	&.ghost {
 		border: 1px solid var(--color-secondary-4);
-		border-radius: var(--border-radius);
+		border-radius: var(--border-radius-md);
 
 		&:hover {
 			border-color: rgb(var(--color-secondary-4-rgb) / 50%);
