--- a/src/components/interface/game/game.module.css
+++ b/src/components/interface/game/game.module.css
@@ -7,14 +7,14 @@
 	padding-inline: 30px;
 	background: rgb(255 255 255 / 7.5%);
 	border: 1px solid var(--color-base-1);
-	border-radius: var(--border-radius);
+	border-radius: var(--border-radius-md);
 	box-shadow: inset 0 1px 0 rgb(255 255 255 / 30%);
 
 	.main {
 		position: relative;
 		inline-size: 238px;
 		background: rgb(var(--color-base-2-rgb) / 84%);
-		border-radius: var(--border-radius);
+		border-radius: var(--border-radius-md);
 		box-shadow: inset 1px 5px 11px rgb(var(--color-base-1-rgb) / 71%);
 
 		button {
@@ -39,7 +39,7 @@
 
 		.help {
 			background: rgb(var(--color-base-2-rgb) / 19%);
-			border-radius: var(--border-radius);
+			border-radius: var(--border-radius-md);
 
 			ul {
 				display: grid;
