--- a/src/global.css
+++ b/src/global.css
@@ -60,7 +60,6 @@
 	--border-width: 1px;
 	--border-radius-sm: 4px;
 	--border-radius-md: 8px;
-	--border-radius: 8px; /* TODO: For migration. Will be removed. */
 	--border-radius-round: 9999px;
 	--transition: all 0.25s ease-in-out;
 }
@@ -77,7 +76,7 @@ html {
 		font-family: var(--font-family-primary), var(--font-family-default);
 		background-color: var(--color-base-2);
 		border: var(--border);
-		border-radius: var(--border-radius);
+		border-radius: var(--border-radius-md);
 
 		main {
 			block-size: var(--block-size-main);
