--- a/src/routes/about-me/index.module.css
+++ b/src/routes/about-me/index.module.css
@@ -58,7 +58,7 @@
 						inline-size: 100%;
 						padding-inline: var(--padding-inline);
 						margin-inline: calc(-1 * var(--padding-inline));
-						border-radius: 4px;
+						border-radius: var(--border-radius-sm);
 
 						&.activated,
 						&:is(:focus-visible, :hover) {
