refactor: Modify calculation of 'margin-inline' CSS property
The calculation of 'margin-inline' property in the 'About Me' module CSS file has been refactored. Previously, the 'calc' function was multiply by -1 to 'var(--padding-inline)', now the '-1' and the variable 'var(--padding-inline)' have been swapped to improve readability.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/routes/about-me/index.module.css
+++ b/src/routes/about-me/index.module.css
@@ -57,7 +57,7 @@
 						gap: 8px;
 						inline-size: 100%;
 						padding-inline: var(--padding-inline);
-						margin-inline: calc(-1 * var(--padding-inline));
+						margin-inline: calc(var(--padding-inline) * -1);
 						border-radius: var(--border-radius-sm);
 
 						&.activated,
