feat: Add focus style to all elements in global CSS
New CSS rules have been added to apply focus styles to all elements. The focus style includes an outline color and offset, improving accessibility and user experience when navigating the site using the keyboard.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/global.css
+++ b/src/global.css
@@ -64,6 +64,13 @@
 	--transition: all 0.25s ease-in-out;
 }
 
+* {
+	:is(&:focus, &:focus-visible) {
+		outline-color: var(--color-accent-4);
+		outline-offset: calc(var(--border-width) * -1 * 2);
+	}
+}
+
 html {
 	padding: var(--padding-outside);
 	font-size: var(--font-size-body);
