feat: Adjust accordion module CSS for better styling
This update modifies the accordion.module.css file to enhance component styling. It adds a border to every container element except the last one in the accordion, and the border styling originally applied to each container is being removed.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/components/interface/accordion/accordion.module.css
+++ b/src/components/interface/accordion/accordion.module.css
@@ -3,6 +3,12 @@
 
 	font-size: var(--font-size-label);
 
+	&:not(:last-child) {
+		.container {
+			border-block-end: var(--border);
+		}
+	}
+
 	.header {
 		display: flex;
 		gap: 11px;
@@ -24,7 +30,6 @@
 
 		.container {
 			padding: var(--padding);
-			border-block-end: var(--border);
 		}
 	}
 }
