refactor: Rename Accordion component styles and slots
Modified class and slot names from 'header' and 'content' to 'head' and 'body' for Accordion component in application's CSS and TSX files.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/components/interface/accordion/accordion.module.css
+++ b/src/components/interface/accordion/accordion.module.css
@@ -9,7 +9,7 @@
 		}
 	}
 
-	.header {
+	.head {
 		display: flex;
 		gap: 11px;
 		align-items: center;
@@ -19,7 +19,7 @@
 		border-block-end: var(--border);
 	}
 
-	.content {
+	.body {
 		max-block-size: 0;
 		overflow: hidden;
 		transition: var(--transition);
