refactor: Move border style from general to body container
The border style that was previously defined for all non-last child elements in the Accordion component has been moved.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/components/interface/accordion/accordion.module.css
+++ b/src/components/interface/accordion/accordion.module.css
@@ -3,12 +3,6 @@
 
 	font-size: var(--font-size-label);
 
-	&:not(:last-child) {
-		.container {
-			border-block-end: var(--border);
-		}
-	}
-
 	.head {
 		display: flex;
 		gap: 11px;
@@ -30,6 +24,14 @@
 
 		.container {
 			padding: var(--padding);
+		}
+	}
+
+	&:not(:last-child) {
+		.body {
+			.container {
+				border-block-end: var(--border);
+			}
 		}
 	}
 }
