feat: Update global CSS for 'focus' state styling
This commit changes the styling of the 'focus' state in the main CSS file. Particularly, it modifies the 'outline' property to be a 3px solid style and the 'outline-offset' property to -3px.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/global.css
+++ b/src/global.css
@@ -59,8 +59,8 @@
 
 * {
 	:is(&:focus, &:focus-visible) {
-		outline-color: var(--color-accent-4);
-		outline-offset: calc(var(--border-width) * -1 * 2);
+		outline: 3px solid var(--color-accent-4);
+		outline-offset: -3px;
 	}
 }
 
